# TIleThePlain

./: .gitignore  .ninja_log  CMakeLists.txt  README.md
.cmake/api/v1/reply/: cmakeFiles-v1-97dd0958bece261ae201.json  index-2024-12-01T20-07-07-0458.json  target-main-57b1eef0c34134ac1bed.json
cg/Assignment3/code_part/: CMakeLists.txt
cg/Assignment3/code_part/.cmake/api/v1/reply/: cache-v2-05c35efa196058f24e4a.json  codemodel-v2-6f828d968c435d5cd182.json
cg/Assignment3/code_part/data/: preProcess.py
cg/Assignment3/code_part/src/: FourStarTwo.cpp  FourStarTwo.h  HelperFunctions.cpp  HelperFunctions.h  StarTripleThree.cpp  StarTripleThree.h  TilePiece.cpp  TilePiece.h  main.cpp
src/: HelperFunctions.cpp  HelperFunctions.h  main.cpp  main.h  preProcess.py
